// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot mfaCredentials default 1`] = `
<div>
  <div
    class="sc-imWYAI fLZoZn"
  >
    <div>
      <div
        class="sc-gFqAkR cwAydj"
      >
        <div>
          <div
            class="sc-gEvEer sc-eqUAAy bEpsus iRHKeq"
          >
            mfa.email.explain
          </div>
          <form
            class="sc-eldPxv kupyLT"
            novalidate=""
          >
            <button
              class="sc-eDPEul gVbigW"
              data-testid="submit"
              type="submit"
            >
              mfa.register.email
            </button>
          </form>
        </div>
        <div
          class="sc-iGgWBj fIbmkT"
        >
          <span>
            or
          </span>
        </div>
        <div>
          <div
            class="sc-gEvEer sc-eqUAAy bEpsus iRHKeq"
          >
            mfa.phoneNumber.explain
          </div>
          <form
            class="sc-eldPxv kupyLT"
            novalidate=""
          >
            <div
              class="sc-dAlyuH gNVVUe"
              required=""
            >
              <label
                class="sc-dhKdcB mUniF"
                for="phone_number"
              >
                phoneNumber
              </label>
              <input
                autocomplete="tel"
                class="sc-jlZhew gZoAQH"
                data-testid="phone_number"
                id="phone_number"
                labels="[object Object]"
                name="phone_number"
                placeholder="phoneNumber"
                required=""
                type="tel"
                value=""
              />
            </div>
            <button
              class="sc-eDPEul gVbigW"
              data-testid="submit"
              type="submit"
            >
              mfa.register.phoneNumber
            </button>
          </form>
        </div>
      </div>
      <div
        class="sc-gFqAkR cwAydj"
      />
    </div>
  </div>
</div>
`;

exports[`Snapshot mfaCredentials no intro 1`] = `
<div>
  <div
    class="sc-imWYAI fLZoZn"
  >
    <div>
      <div
        class="sc-gFqAkR cwAydj"
      />
      <div
        class="sc-gFqAkR cwAydj"
      >
        <div>
          <form
            class="sc-eldPxv kupyLT"
            novalidate=""
          >
            <button
              class="sc-eDPEul gVbigW"
              data-testid="submit"
              type="submit"
            >
              mfa.remove.email
            </button>
          </form>
        </div>
        <div
          class="sc-iGgWBj fIbmkT"
        >
          <span>
            or
          </span>
        </div>
        <div>
          <form
            class="sc-eldPxv kupyLT"
            novalidate=""
          >
            <button
              class="sc-eDPEul gVbigW"
              data-testid="submit"
              type="submit"
            >
              mfa.remove.phoneNumber
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;
